@@ -6,6 +6,7 @@ New features
 
 Enhancements
  - [eas] now also search on senders when using EAS Search ops
+ - [web] allow multiple messages to be marked as seen (#3873)
 
 Bug fixes
  - [core] fixed condition in weekly recurrence calculator
